# gpu-viv6-andy

./: .gitignore  Android.mk
driver/: .gitignore  Android.mk  Android.mk.def  Dirs  Kbuild  Makefile  ProjSysgen.bat  ReadMe_Android.txt  ReadMe_OpenCL.txt  VERSION  board_specific_Dove.inc  board_specific_Mustang.inc  cegenvivsdk.bat  common.node  common.target  config  config.bat  copy_installed_module.mk  driver_build_sample.sh  driver_build_sample_dfb.sh  driver_build_sample_dri3.sh  driver_build_sample_wl.sh  driver_build_sample_x11.sh  environment  environment_aarch64  gchal.bib  gchal.reg  makefile.linux  makefile.linux.def  makefile.linux.def.drv  makefile.linux.drv  sources.cmn  sources.cmn.drv  wince_install.inc
driver/build_qnx/: Makefile  common.mk  gen_reg.sh  install_common_driver.sh  math.mk
driver/build_qnx/archmodel/: common.mk
driver/build_qnx/archmodelInterface/: Makefile  common.mk
driver/build_qnx/archmodelSw/: Makefile  common.mk
driver/build_qnx/cl/: common.mk
driver/build_qnx/clc/: common.mk
driver/build_qnx/egl/: common.mk
driver/build_qnx/gal/: common.mk
driver/build_qnx/galcore/: common.mk  galcore.use
driver/build_qnx/gles11/: common.mk
driver/build_qnx/gles20/: common.mk
driver/build_qnx/gles20sc/: common.mk
driver/build_qnx/gles30/: common.mk
driver/build_qnx/halarchkernel/: Makefile  common.mk
driver/build_qnx/halarchkernel_vg/: common.mk
driver/build_qnx/halarchuser/: common.mk
driver/build_qnx/halarchuser_vg/: common.mk
driver/build_qnx/halkernel/: common.mk
driver/build_qnx/halosuser/: Makefile  common.mk
driver/build_qnx/llvm/: common.mk
driver/build_qnx/nngpu/: common.mk
driver/build_qnx/nnvxc/: common.mk
driver/build_qnx/ovx12/: common.mk
driver/build_qnx/screen/: Makefile.dnm  common.mk
driver/build_qnx/vdk/: common.mk
driver/build_qnx/vg11/: common.mk
driver/build_qnx/vg11_vg/: common.mk
driver/build_qnx/vipArchPerf/: common.mk
driver/build_qnx/vsc/: common.mk
driver/build_qnx/vx/: common.mk
driver/build_qnx/vxc/: common.mk
driver/build_qnx/vxu/: Makefile  common.mk
driver/cebuild/: board_specific_GuruCE_iMX6.inc  board_specific_TI_SDP44XX.inc  board_specific_iMX6Q_SABREAuto.inc  board_specific_iMX6Q_SABRE_SDB.inc  board_specific_qseven_mmp3.inc
driver/compiler/: dirs  makefile.linux
driver/compiler/libCLC/: Android.mk  dirs  makefile.linux  makefile.linux.def
driver/compiler/libGLSLC/: Android.mk  dirs  makefile  makefile.linux  makefile.linux.def
driver/compiler/libSPIRV/: Android.mk  Makefile.am  makefile.linux
driver/compiler/libSPIRV/spvconverter/: gc_spirv.h  gc_spirv_cvter.h  gc_spirv_disassemble.h  gc_spirv_instparam_def.h  gc_spirv_mempool.c  gc_spirv_mempool.h  gc_spirv_spec_constant_op.c  gc_spirv_to_vir.c  gc_spirv_to_vir.h  gc_spirv_types.h  gc_spriv_disassmble.c  spvconverter.def  spvconverter.map
driver/compiler/libVSC/: Android.mk  libVSC.def  libVSC.map  makefile  makefile.linux  readme.txt  sources
driver/compiler/libVSC_Lite/: Android.mk  libVSC_Lite.def  libVSC_Lite.map  makefile.linux
driver/driver/: dirs
driver/driver/X/: README
driver/driver/dfb/: gc_dfb.c  gc_dfb.h  gc_dfb_conf.c  gc_dfb_conf.h  gc_dfb_config  gc_dfb_pool.c  gc_dfb_pool.h  gc_dfb_raster.c  gc_dfb_raster.h  gc_dfb_state.c  gc_dfb_state.h  gc_dfb_utils.c  gc_dfb_utils.h  makefile.linux  makefile.linux.def
driver/driver/khronos/: dirs
driver/driver/khronos/libVulkan10/: Android.mk  Makefile.am  icd_VeriSilicon.json  libVulkan.def  libVulkan.map  makefile.linux  vulkan.pc.in
driver/driver/khronos/libVulkan10/include/: gc_vk_chip.h  gc_vk_cmdbuf.h  gc_vk_context.h  gc_vk_core.h  gc_vk_debug.h  gc_vk_desc.h  gc_vk_devqueue.h  gc_vk_dispatch.h  gc_vk_framebuffer.h  gc_vk_object.h  gc_vk_os.h  gc_vk_pipeline.h  gc_vk_precomp.h  gc_vk_query.h  gc_vk_resource.h  gc_vk_types.h  gc_vk_utils.h  gc_vk_wsi.h
driver/driver/khronos/libVulkan10/include/chip/: gc_halti5_chip.h
driver/driver/khronos/libVulkan10/src/: gc_vk_api.c  gc_vk_chip.c  gc_vk_cmdbuf.c  gc_vk_context.c  gc_vk_descriptor.c  gc_vk_devqueue.c  gc_vk_dispatch.c  gc_vk_framebuffer.c  gc_vk_icd.c  gc_vk_instance.c  gc_vk_noop.c  gc_vk_object.c  gc_vk_phydevice.c  gc_vk_pipeline.c  gc_vk_query.c  gc_vk_resource.c  gc_vk_shader.c  gc_vk_sync.c  gc_vk_utils.c  gc_vk_validation.c
driver/driver/khronos/libVulkan10/src/chip/: gc_halti2_chip.c  gc_halti3_chip.c  gc_halti5_blit.comp.h  gc_halti5_chip.c  gc_halti5_cmdbuf.c  gc_halti5_computeblit.c  gc_halti5_patchlib.frag.h  gc_halti5_pipeline.c  gc_halti5_resource.c  gc_halti5_tweak.c
driver/driver/khronos/libVulkan10/src/wsi/: gc_wsi_display.c  gc_wsi_display_fbdev.c  gc_wsi_surface.c  gc_wsi_surface_android.c  gc_wsi_surface_mir.c  gc_wsi_surface_wayland.c  gc_wsi_surface_xcb.c  gc_wsi_surface_xlib.c  gc_wsi_swapchain.c  gc_wsi_win32.c
driver/driver/wayland/: README-1.7.txt  README-1.9.txt  linux-explicit-synchronization-unstable-v1-client-protocol.h  linux-explicit-synchronization-unstable-v1-protocol.c  linux-explicit-synchronization-unstable-v1-server-protocol.h  wayland-viv-client-protocol.h  wayland-viv-protocol.c  wayland-viv-server-protocol.h  wl-viv-buffer.h
driver/driver/windows/: dirs
driver/driver/wl/: Makefile.am  configure.ac  gc_wayland_protocol.c  gc_wayland_protocol.h  gc_wayland_protocol.pc.in  gcmakefile.linux  makefile.linux  readme.txt  wayland-egl.pc.in  wayland-viv-client-protocol.h  wayland-viv-protocol.c  wayland-viv-server-protocol.h  wayland-viv.pc.in
driver/driver/wl/patch/: vivante_weston_patch_20160427.diff
driver/driver/wl/protocol/: wayland-viv.xml
driver/hal/: dirs  makefile.linux
driver/sdk/: dirs
fsl_drv/helper/: Android.mk
fsl_drv/tool/: Android.mk
test/: Dirs  README  VERSION  common.node  common.target  config.bat  environment  environment_aarch64  gchal.bib  gchal.reg  makefile.linux  makefile.linux.def  makefile.linux.def.tst  makefile.linux.tst  sources.cmn  sources.cmn.tst  test_build_sample.sh
test/cl11/: makefile.linux
test/sdk/: dirs  makefile.linux
test/test/: Android.mk  Dirs
(+7144 files in other folders)
